--- a/style/stencil.css
+++ b/style/stencil.css
@@ -49,6 +49,9 @@ header a:hover{
 .strip{
   min-height: 300px;
   background: url(/images/1646676474159.jpg);
+   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .strip .container{
   display: flex;
